[project]
name = "contentagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.134.0",
    "google-search-results>=2.4.2",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "serpapi>=0.1.5",
    "uvicorn>=0.41.0",
]
